--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "art-template": "^4.13.2",
     "assert": "^2.0.0",
     "async_hooks": "^1.0.0",
     "babel-loader": "7",
@@ -34,6 +35,7 @@
     "execa": "^5.1.1",
     "expect-picture": "^1.0.3",
     "express": "^4.17.1",
+    "express-art-template": "^1.0.1",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.3.2",
     "http": "^0.0.1-security",
@@ -43,6 +45,7 @@
     "nodemon": "^2.0.14",
     "npm": "^7.21.1",
     "progress": "^2.0.3",
+    "redux": "^4.1.2",
     "style-loader": "^3.2.1",
     "thread-loader": "^3.0.4",
     "timer": "^1.0.1",
